--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link
         href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"
         rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Playfair+Display:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic"
+        rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
     <title>HouseRepair</title>
 </head>
@@ -52,7 +54,8 @@
                 <div class="mainbclock__container container">
                     <div class="mainblock__body">
                         <h1 class="mainblock__title">Ремонт квартир в Киеве <br>от команды профессионалов</h1>
-                        <div class="mainblock__text">При заказе полного ремонта квартиры,<br>технический дизайн проект в подарок</div>
+                        <div class="mainblock__text">При заказе полного ремонта квартиры,<br>технический дизайн проект в
+                            подарок</div>
                         <div class="mainblock__buttons">
                             <button href="" class="mainblock__button">Заказать</button>
                         </div>
@@ -68,6 +71,77 @@
                 </div>
             </div>
         </main>
+        <div class="services">
+            <div class="services__container container">
+                <div class="services__body">
+                    <div class="services__title">Услуги</div>
+                    <div class="services__menu">
+                        <ul class="services__list">
+                            <li class="service__item">Демонтажные работы</li>
+                            <li class="service__item">Сантехнические работы</li>
+                            <li class="service__item">Электромонтажные работы</li>
+                            <li class="service__item">Отделочные работы</li>
+                            <li class="service__item">Укладка напольных покрытий</li>
+                            <li class="service__item">Стяжка пола</li>
+                            <li class="service__item">Малярные работы</li>
+                            <li class="service__item">Эскизы с детализацией
+                                сложных конструкций
+                                и развёртками всех стен</li>
+                            <li class="service__item">Уборка и вывоз строительного мусора</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="services__content">
+                    <img src="images/services1.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="about_us">
+            <div class="abou_us__container container">
+                <div class="about_us__title">Почему мы?</div>
+                <div class="about_us__content">
+                    <div class="about_us__content__item ">
+                        <div class="about_us__img1"><img  src="images/about_us1.svg" alt=""></div>
+                        <div class="abot_us__text">
+                            <h1 class="about_us__subtitle">Гарантии качества</h1>
+                            <p class="about_us__item__text">Cрок гарантии на все виды работ<br>
+                                не менее 1 года и он<br> прописан
+                                в договоре.</p>
+                        </div>
+                    </div>
+                    <div class="about_us__content__item">
+                        <div class="about_us__img2" ><img src="images/about_us2.svg" alt=""></div>
+                        <div class="abot_us__text">
+                            <h1 class="about_us__subtitle">Статус компании</h1>
+                            <p class="about_us__item__text">Мы встречаемся с нашими клиентами
+                                по фактическому адресу в офисе,
+                                в котором находимся уже много лет.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about_us__content">
+                    <div class="about_us__content__item ">
+                        <div class="about_us__img3" ><img src="images/about_us3.svg" alt=""></div>
+                        <div class="abot_us__text">
+                            <h1 class="about_us__subtitle">Порядок и суммы оплаты</h1>
+                            <p class="about_us__item__text">Оплата происходит поэтапно
+                                <br>(без авансов и предоплат), согласно
+                                предоставленного сметного
+                                расчета</p>
+                        </div>
+                    </div>
+                    <div class="about_us__content__item">
+                        <div class="about_us__img4" ><img src="images/about_us4.svg" alt=""></div>
+                        <div class="abot_us__text">
+                            <h1 class="about_us__subtitle">Соблюдение сроков</h1>
+                            <p class="about_us__item__text">Все сроки выполнения работы,
+                                согласованные с клиентом,
+                                отражаются в договоре. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer class="footer">
 
         </footer>
