--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="about_us__title">Почему мы?</div>
                 <div class="about_us__content">
                     <div class="about_us__content__item ">
-                        <div class="about_us__img1"><img  src="images/about_us1.svg" alt=""></div>
+                        <div class="about_us__img1"><img src="images/about_us1.svg" alt=""></div>
                         <div class="abot_us__text">
                             <h1 class="about_us__subtitle">Гарантии качества</h1>
                             <p class="about_us__item__text">Cрок гарантии на все виды работ<br>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="about_us__content__item">
-                        <div class="about_us__img2" ><img src="images/about_us2.svg" alt=""></div>
+                        <div class="about_us__img2"><img src="images/about_us2.svg" alt=""></div>
                         <div class="abot_us__text">
                             <h1 class="about_us__subtitle">Статус компании</h1>
                             <p class="about_us__item__text">Мы встречаемся с нашими клиентами
@@ -121,17 +121,18 @@
                 </div>
                 <div class="about_us__content">
                     <div class="about_us__content__item ">
-                        <div class="about_us__img3" ><img src="images/about_us3.svg" alt=""></div>
+                        <div class="about_us__img3"><img src="images/about_us3.svg" alt=""></div>
                         <div class="abot_us__text">
                             <h1 class="about_us__subtitle">Порядок и суммы оплаты</h1>
                             <p class="about_us__item__text">Оплата происходит поэтапно
                                 <br>(без авансов и предоплат), согласно
                                 предоставленного сметного
-                                расчета</p>
+                                расчета
+                            </p>
                         </div>
                     </div>
                     <div class="about_us__content__item">
-                        <div class="about_us__img4" ><img src="images/about_us4.svg" alt=""></div>
+                        <div class="about_us__img4"><img src="images/about_us4.svg" alt=""></div>
                         <div class="abot_us__text">
                             <h1 class="about_us__subtitle">Соблюдение сроков</h1>
                             <p class="about_us__item__text">Все сроки выполнения работы,
@@ -140,6 +141,33 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="about-us">
+            <div class="about-us__mainblock mainblock">
+
+                <div class="about-us__container container">
+                    <div class="about-us__content">
+                        <h1 class="about-us__title">О нас</h1>
+                        <p class="about-us__text">Компания <a class="about-us__a">«HouseRepair»</a> предлагает полный
+                            спектр ремонтно-строительных работ.</p>
+                        <ul class="about-us__list">
+                            <li class="about-list__item">Проведем ремонт помещений в любом формате – косметические,
+                                евростандарт, комплексные, эксклюзивные и дизайнерские работы.</li>
+                            <li class="about-list__item">Готовы быстро и ответственно решить поставленную клиентом
+                                задачу.</li>
+                            <li class="about-list__item">Мы пунктуальны – соблюдаем сроки, педантичны – ручаемся за
+                                качество и честны – гарантируем адекватные цены.</li>
+                            <li class="about-list__item">Четко вписываемся в сроки и смету, у нас работают только
+                                профессионалы.</li>
+                            <li class="about-list__item">Предлагаем оригинальные идеи и нестандартные дизайнерские
+                                решения!</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <img class="about-us__image" src="images/about_image.jpg" alt="">
+                <div class="about-us__black"></div>
             </div>
         </div>
         <footer class="footer">
