--- a/index.html
+++ b/index.html
@@ -170,6 +170,140 @@
                 <div class="about-us__black"></div>
             </div>
         </div>
+        <div class="info">
+            <div class="info__container container">
+                <div class="info__title title">Как мы работаем</div>
+                <div class="info__line">
+                    <div class="info__item">
+                        <div class="info__item__number">1</div>
+                        <div class="info__item__text">
+                            <h1 class="info__item__task">Телефонный звонок или встреча в офисе</h1>
+                            <p class="info__item__about">Свяжитесь с нами чтобы назначить встречу.</p>
+                        </div>
+                    </div>
+                    <div class="info__item">
+                        <div class="info__item__number">2</div>
+                        <div class="info__item__text">
+                            <h1 class="info__item__task">Выезд инженера по замерам</h1>
+                            <p class="info__item__about">Ожидайте инженера
+                                на объекте
+                                в кратчайшие сроinfo__item__aboutки.</p>
+                        </div>
+                    </div>
+                    <div class="info__item">
+                        <div class="info__item__number">3</div>
+                        <div class="info__item__text">
+                            <h1 class="info__item__task">Oфициальный договор</h1>
+                            <p class="info__item__about">Заключаем официальный договор,  согласовав
+                                его с заказчиком.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="info__line">
+                    <div class="info__item">
+                        <div class="info__item__number">4</div>
+                        <div class="info__item__text">
+                            <h1 class="info__item__task">Отчеты и чеки
+                                по закупкам</h1>
+                            <p class="info__item__about">Будьте в курсе затрат на ремонт, благодаря еженедельному
+                                отчету нашей компании
+                                вы будете знать куда потрачена каждая копейка
+                                </p>
+                        </div>
+                    </div>
+                    <div class="info__item">
+                        <div class="info__item__number">5</div>
+                        <div class="info__item__text">
+                            <h1 class="info__item__task">Выплачиваем штрафы </h1>
+                            <p class="info__item__about">Мы берем на себя обязательства
+                                и за просроченные дни
+                                выплачиваем пеню</p>
+                        </div>
+                    </div>
+                    <div class="info__item">
+                        <div class="info__item__number">6</div>
+                        <div class="info__item__text">
+                            <h1 class="info__item__task">Даем до 36 месяцев гарантии</h1>
+                            <p class="info__item__about">Заключаем гарантийный договор на все
+                                ремонтно-строительные работы от 1 до 3 лет с момента сдачи объекта.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="info__line">
+                    <div class="info__item">
+                        <div class="info__item__number">7</div>
+                        <div class="info__item__text">
+                            <h1 class="info__item__task">Не только закупим, но и доставим</h1>
+                            <p class="info__item__about">Вы вправе заниматься закупкой и доставкой самостоятельно, или полностью возложите эту задачу на нас.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="info__item">
+                        <div class="info__item__number">8</div>
+                        <div class="info__item__text">
+                            <h1 class="info__item__task">Постоянно действующие акции</h1>
+                            <p class="info__item__about">Заказывая ремонт квартиры «под ключ» станьте участником
+                                постоянных акций. </p>
+                        </div>
+                    </div>
+                    <div class="info__item">
+                        <div class="info__item__number">9</div>
+                        <div class="info__item__text">
+                            <h1 class="info__item__task">Скидки на закупку материалов</h1>
+                            <p class="info__item__about">Являемся крупным импортером высококачественных красок, декоративных смесей</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="portfolio">
+            <div class="portfolio__container container">
+                <div class="portfolio__title title">Портфолио</div>
+                <div class="portfolio__line">
+                    <div class="portfolio__item">
+                        <div class="portfolio__item__image">
+                            <img src="images/port1.jpg" alt="">
+                        </div>
+                        <p class="portfolio__item__text">Капитальный ремонт с перепланировкой
+                            двухкомнатной квартиры под ключ</p>
+                        <a href="" class="portfolio__item__more">Подробнее</a>
+                    </div>
+                    <div class="portfolio__item">
+                        <div class="portfolio__item__image">
+                            <img src="images/port2.jpg" alt="">
+                        </div>
+                        <p class="portfolio__item__text">Капитальный ремонт квартиры
+                            <br>в новостройке</p>
+                        <a href="" class="portfolio__item__more">Подробнее</a>
+                    </div>
+                </div>
+                <div class="portfolio__line">
+                    <div class="portfolio__item">
+                        <div class="portfolio__item__image">
+                            <img src="images/port3.jpg" alt="">
+                        </div>
+                        <p class="portfolio__item__text">Элитный ремонт двухкомнатной квартиры
+                            под ключ</p>
+                        <a href="" class="portfolio__item__more">Подробнее</a>
+                    </div>
+                    <div class="portfolio__item">
+                        <div class="portfolio__item__image">
+                            <img src="images/port4.jpg" alt="">
+                        </div>
+                        <p class="portfolio__item__text">Трехкомнатная квартира - капитальный ремонт
+                            под ключ</p>
+                        <a href="" class="portfolio__item__more">Подробнее</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="form">
+            <div class="form__container container">
+                <div class="form__mainblock">
+                    
+                </div>
+            </div>
+        </div>
         <footer class="footer">
 
         </footer>
