--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             <h1 class="info__item__task">Выезд инженера по замерам</h1>
                             <p class="info__item__about">Ожидайте инженера
                                 на объекте
-                                в кратчайшие сроinfo__item__aboutки.</p>
+                                в кратчайшие сроки.</p>
                         </div>
                     </div>
                     <div class="info__item">
