--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="info__item">
                         <div class="info__item__number">3</div>
                         <div class="info__item__text">
-                            <h1 class="info__item__task">Oфициальный договор</h1>
+                            <h1 class="info__item__task">Oфициальный <br>договор</h1>
                             <p class="info__item__about">Заключаем официальный договор,  согласовав
                                 его с заказчиком.</p>
                         </div>
@@ -214,7 +214,7 @@
                     <div class="info__item">
                         <div class="info__item__number">5</div>
                         <div class="info__item__text">
-                            <h1 class="info__item__task">Выплачиваем штрафы </h1>
+                            <h1 class="info__item__task">Выплачиваем <br>штрафы </h1>
                             <p class="info__item__about">Мы берем на себя обязательства
                                 и за просроченные дни
                                 выплачиваем пеню</p>
