--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
                         <div class="home-info">
                             <div class="home-item">
                                 <p>5 лет
-                                <h3>опыта работы</h3>
+                               <br> <span class="home-span">опыта работы</span>
                                 </p>
                             </div>
                             <div class="home-item">
                                 <p>600 семей
-                                <h3>доверют</h3>
+                                <br><span class="home-span">доверют</span>
                                 </p>
                             </div>
                             <div class="home-item">
                                 <p>12 месяцев
-                                <h3>гарантии</h3>
+                                <br><span class="home-span">гарантии</span>
                                 </p>
                             </div>
                         </div>
@@ -145,8 +145,8 @@
                             <div class="pros-text">
                                 <h1 class="pros-subtitle">Статус компании</h1>
                                 <p class="pros-item-text">Мы встречаемся с нашими клиентами
-                                    по фактическому адресу в офисе,
-                                    в котором находимся уже много лет.</p>
+                                    по фактическому адресу в офисе
+                                   .</p>
                             </div>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                             <div class="pros-text">
                                 <h1 class="pros-subtitle">Порядок и суммы оплаты</h1>
                                 <p class="pros-item-text">Оплата происходит поэтапно
-                                    <br>(без авансов и предоплат), согласно
+                                    , согласно
                                     предоставленного сметного
                                     расчета
                                 </p>
@@ -339,7 +339,7 @@
                             <input class="form-input" placeholder="Фамилия" type="text" tabindex="2" name="surname" />
                         </div>
                         <div class="form-data2">
-                            <input class="form-input" placeholder="+ 380 ()" type="number" tabindex="3" name="phone" />
+                            <input class="form-input" placeholder="+ 380 ( )" type="number" tabindex="3" name="phone" />
                             <input class="form-input" placeholder="Почта" type="text" tabindex="4" name="mail" />
                         </div>
                         <div class="form-btn">
@@ -352,11 +352,70 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer-content">
-                    <div class="footer-text"></div>
+                    <div class="footer-text">
+                        <div class="footer-logo">HouseRepair</div>
+                        <div class="footer-info">
+                            <div class="footer-nav">
+                                <ul class="footer-list1">
+                                    <li>
+                                        <a href="" class="footer-link1">Услуги</a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="footer-link1">Преимущества</a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="footer-link1">О нас</a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="footer-link1">Как мы работаем</a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="footer-link1">Портфолио</a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="footer-link1">Контакты</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="footer-col-2">
+                                <div class="footer-data">
+                                    <ul class="footer-list2">
+                                        <li class="footer-link2">График работы</li>
+                                        <li class="footer-link3">1</li>
+                                        <li class="footer-link2">Пн-Пт с 9:00 до 20:00</li>
+                                        <li class="footer-link2"> Сб с 10:00 до 16:00</li>
+                                        <li class="footer-link3">1</li>
+                                        <li class="footer-link3">1</li>
+                                        <li class="footer-link2">Телефоны и почта</li>
+                                        <li class="footer-link3">1</li>
+                                        <li class="footer-link2">+38 (067) 345-67-89</li>
+                                        <li class="footer-link2"> +38 (050) 565-23-98</li>
+                                        <li class="footer-link2">info@houserepair.com.ua</li>
+                                    </ul>
+                                </div>
+                                <div class="footer-geo">
+                                    <ul class="footer-list3">
+                                        <li class="footer-link2">Адрес</li>
+                                        <li class="footer-link3">1</li>
+                                        <li class="footer-link4">г. Киев, пр-т. Мира, 2
+                                            ТЦ»Дарница»,
+                                            офис Компании
+                                            «HouseRepair»</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="footer-map">
                         <img class="footer-img" src="./images/map.jpg" alt="">
                     </div>
                 </div>
+            </div>
+            <div class="footer-map-tab">
+                <img class="footer-tab-img" src="./images/footer_tab.jpg" alt="">
+            </div>
+            <div class="footer-map-mob">
+                <img class="footer-mob-img" src="./images/footer_mob.jpg" alt="">
             </div>
         </footer>
     </div>
