--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 <body>
     <div class="wrapper">
-        <header class="header" id="header">
+        <header class="header" >
             <div class="container">
                 <div class="header-body">
-                    <a href="#header" class="header-logo">HouseRepair</a>
+                    <a href="#home" class="header-logo">HouseRepair</a>
                     <div class="header-burger">
                         <span></span>
                     </div>
@@ -53,7 +53,7 @@
             </div>
         </header>
         <main>
-            <section class="home">
+            <section class="home" id="#home">
                 <div class="container">
                     <div class="home-content">
                         <h1 class="home-heading">Ремонт квартир
